--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta name="csrf-token" content="{{ csrf_token() }}"> -->
     <title>Vite + React</title>
   </head>
   <body>
